--- a/resources/css/overlay.css
+++ b/resources/css/overlay.css
@@ -10,6 +10,18 @@
     justify-content: center;
     align-items: center;
 }
+
+.overlay .card {
+    position: fixed;
+    top: 10%; /* adjust the value of 20px to your desired spacing */
+    left: 50%;
+    transform: translate(-50%, 0);
+    width: 70%;
+    background-color: white;
+    border-radius: 5px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+}
+
 .overlay img {
     max-width: 90%;
     max-height: 90%;
