- added edit details for images name and group - added functions to add gallery images to the dashboard - added functions to add checkmarks in gallery if images is bing used in dashboard - fixed issues with model - other minor fixes

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,5 +1,6 @@
 @import '@fortawesome/fontawesome-free/css/all.min.css';
 @import 'overlay.css';
+@import 'modal.css';
 @import 'textarea-expander.css';
 @import 'stripe.css';
 @import '@selectize/selectize/dist/css/selectize.css';
