--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -202,13 +202,12 @@
     }
 
     .alert-error {
-        @apply bg-red-300;
-        display: none;
+        @apply bg-red-300 text-gray-100;
         overflow: hidden;
     }
 
     .alert-error::before {
-        @apply text-gray-300 text-[12px] bg-red-600 rounded-xl px-4 py-2 mr-2;
+        @apply text-gray-100 text-[12px] bg-red-600 rounded-xl px-4 py-2 mr-2;
         content: 'Error';
         position: absolute;
         top: 0;
