added new parameters and fixed some issue

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -81,7 +81,7 @@
     }
 
     .parameter-container {
-        @apply text-xs rounded p-2 border-sky-300;
+        @apply text-xs rounded p-2 border-sky-300 h-[46px];
     }
 
     .btn {
